# lvgl-template-plugin

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: DistrhoPluginInfo.h  PluginDSP.cpp  PluginUI.cpp  lv_conf.h
